[gd_scene load_steps=35 format=3 uid="uid://biy1mk3b78gh"]

[ext_resource type="Script" uid="uid://i1llq8yq18p8" path="res://scenes/objects/players/weapons/special_weapons/scorch_barrier.gd" id="1_emmpe"]
[ext_resource type="Shader" uid="uid://b3xb8j1icuyp" path="res://shaders/PaletteSwap.gdshader" id="2_ca07l"]
[ext_resource type="Texture2D" uid="uid://dvjjfk8p26ypa" path="res://sprites/players/weapons/Blaze1.png" id="2_e0r6x"]
[ext_resource type="Texture2D" uid="uid://bswfxxprmqqcy" path="res://sprites/players/weapons/Blaze2.png" id="3_88uls"]
[ext_resource type="Texture2D" uid="uid://gu0ow5kip6hj" path="res://sprites/players/weapons/Blaze3.png" id="4_3y8vu"]
[ext_resource type="Texture2D" uid="uid://b0wmbfr68jjcj" path="res://sprites/players/copy_robot/weapons/BusterSmall.png" id="4_ke4xy"]
[ext_resource type="AudioStream" uid="uid://dcvhxvuushcu4" path="res://sounds/chargeshot.wav" id="5_l2puw"]
[ext_resource type="AudioStream" uid="uid://cs2dmn3ahpbea" path="res://sounds/pop.wav" id="6_wmt8g"]
[ext_resource type="AudioStream" uid="uid://mcla46x8hsbd" path="res://sounds/scorchambient.wav" id="9_hao3f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fyvtn"]
shader = ExtResource("2_ca07l")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qxxqs"]
atlas = ExtResource("2_e0r6x")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4sru"]
atlas = ExtResource("2_e0r6x")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk23t"]
atlas = ExtResource("2_e0r6x")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbrbu"]
atlas = ExtResource("2_e0r6x")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qahf"]
atlas = ExtResource("2_e0r6x")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_12qe0"]
atlas = ExtResource("2_e0r6x")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qimc"]
atlas = ExtResource("2_e0r6x")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhgaj"]
atlas = ExtResource("2_e0r6x")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx6wy"]
atlas = ExtResource("2_e0r6x")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tw6a"]
atlas = ExtResource("2_e0r6x")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2gqi"]
atlas = ExtResource("2_e0r6x")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_15sce"]
atlas = ExtResource("2_e0r6x")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvpth"]
atlas = ExtResource("3_88uls")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej2ts"]
atlas = ExtResource("3_88uls")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4uct"]
atlas = ExtResource("3_88uls")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4cce"]
atlas = ExtResource("3_88uls")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qn0j"]
atlas = ExtResource("3_88uls")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mm1n"]
atlas = ExtResource("3_88uls")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvi4w"]
atlas = ExtResource("4_3y8vu")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_e08mh"]
atlas = ExtResource("4_ke4xy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp8dl"]
atlas = ExtResource("4_ke4xy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj74"]
atlas = ExtResource("4_ke4xy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmmfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxxqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4sru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk23t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbrbu")
}],
"loop": true,
"name": &"Bass",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qahf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12qe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qimc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhgaj")
}],
"loop": true,
"name": &"Bass-Move",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx6wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tw6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2gqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15sce")
}],
"loop": true,
"name": &"Bass-Move2",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvpth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej2ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4uct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4uct")
}],
"loop": false,
"name": &"Copy",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4cce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qn0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mm1n")
}],
"loop": true,
"name": &"Copy-Move",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvi4w")
}],
"loop": true,
"name": &"Wet",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e08mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp8dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj74")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hao3f"]

[node name="ScorchBarrier" type="CharacterBody2D" groups=["scorch"]]
z_index = 2
collision_layer = 10
collision_mask = 20
script = ExtResource("1_emmpe")

[node name="MainSprite" type="AnimatedSprite2D" parent="." groups=["scorch"]]
material = SubResource("ShaderMaterial_fyvtn")
position = Vector2(-0.25, 0)
scale = Vector2(1.02381, 1)
sprite_frames = SubResource("SpriteFrames_tmmfq")
animation = &"Bass-Move"
autoplay = "Bass"
frame_progress = 0.594663

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["scorch"]]
position = Vector2(-2.86102e-06, 0.499992)
scale = Vector2(4, 18.15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["scorch"]]
shape = SubResource("RectangleShape2D_hao3f")

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_l2puw")
bus = &"SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wmt8g")
bus = &"SFX"

[node name="AmbientSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hao3f")
volume_db = 2.0

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
